# hackathon-eng-retreat-winter-2025

./: .gitignore  CLAUDE.md  README.md  Voice Typer.spec  devbox.json  pyproject.toml  setup.py  temp_claude_plan.md  todo.md
scripts/: build_app.sh
src/voice_typer/: __init__.py  audio.py  config.py  hotkey.py  main.py  model_manager.py  permissions.py  statusbar.py  transcribe.py  typer.py
